@@ -9,9 +9,12 @@ from decimal import Decimal
 
 from django.db import models
 from django.utils.encoding import python_2_unicode_compatible
+from django.utils.translation import ugettext_lazy as _
 
 from currency_history.models import Currency, CurrencyRateHistory
 from dateutil import relativedelta
+from import_export import resources
+from import_export.fields import Field
 
 
 class AmountMixin(object):
@@ -46,29 +49,43 @@ class AmountMixin(object):
 
 @python_2_unicode_compatible
 class Account(models.Model):
-    name = models.CharField(max_length=128)
+    name = models.CharField(
+        max_length=128,
+        verbose_name=_('Name'),
+    )
 
-    slug = models.SlugField(max_length=128)
+    slug = models.SlugField(
+        max_length=128,
+        verbose_name=_('Slug'),
+    )
 
     currency = models.ForeignKey(
         'currency_history.Currency',
         related_name='accounts',
+        verbose_name=_('Currency'),
     )
 
     initial_amount = models.DecimalField(
         max_digits=10,
         decimal_places=2,
         default=0,
+        verbose_name=_('Initial amount'),
     )
 
     total_amount = models.DecimalField(
         max_digits=10,
         decimal_places=2,
         default=0,
+        verbose_name=_('Total amount'),
     )
 
     def __str__(self):
         return self.name
+
+    class Meta:
+        ordering = ['name']
+        verbose_name = _('Account')
+        verbose_name_plural = _('Accounts')
 
     def get_balance(self, month=None):
         """
@@ -109,17 +126,28 @@ class Invoice(AmountMixin, models.Model):
     invoice_type = models.CharField(
         max_length=1,
         choices=INVOICE_TYPE_CHOICES,
+        verbose_name=_('Invoice type'),
     )
 
-    invoice_date = models.DateField()
+    invoice_date = models.DateField(
+        verbose_name=_('Invoice date'),
+    )
 
-    invoice_number = models.CharField(max_length=256, blank=True)
+    invoice_number = models.CharField(
+        max_length=256,
+        verbose_name=_('Invoice No.'),
+        blank=True,
+    )
 
-    description = models.TextField(blank=True)
+    description = models.TextField(
+        verbose_name=_('Description'),
+        blank=True,
+    )
 
     currency = models.ForeignKey(
         'currency_history.Currency',
         related_name='invoices',
+        verbose_name=_('Currency'),
     )
 
     amount_net = models.DecimalField(
@@ -127,12 +155,14 @@ class Invoice(AmountMixin, models.Model):
         decimal_places=2,
         default=0,
         blank=True,
+        verbose_name=_('Amount net'),
     )
 
     vat = models.DecimalField(
         max_digits=4,
         decimal_places=2,
         default=0,
+        verbose_name=_('VAT'),
     )
 
     amount_gross = models.DecimalField(
@@ -140,28 +170,41 @@ class Invoice(AmountMixin, models.Model):
         decimal_places=2,
         default=0,
         blank=True,
+        verbose_name=_('Amount gross'),
     )
 
     value_net = models.DecimalField(
         max_digits=10,
         decimal_places=2,
         default=0,
+        verbose_name=_('Value net'),
     )
 
     value_gross = models.DecimalField(
         max_digits=10,
         decimal_places=2,
         default=0,
+        verbose_name=_('Value gross'),
     )
 
-    payment_date = models.DateField(blank=True, null=True)
+    payment_date = models.DateField(
+        verbose_name=_('Payment date'),
+        blank=True,
+        null=True,
+    )
 
-    pdf = models.FileField(upload_to='invoice_files', blank=True, null=True)
+    pdf = models.FileField(
+        upload_to='invoice_files',
+        verbose_name=_('PDF'),
+        blank=True, null=True,
+    )
 
     objects = InvoiceManager()
 
     class Meta:
-        ordering = ['-invoice_date', ]
+        ordering = ['-invoice_date', '-pk']
+        verbose_name = _('Invoice')
+        verbose_name_plural = _('Invoices')
 
     def __str__(self):
         if self.invoice_number:
@@ -201,10 +244,15 @@ class Invoice(AmountMixin, models.Model):
 
 @python_2_unicode_compatible
 class Payee(models.Model):
-    name = models.CharField(max_length=256)
+    name = models.CharField(
+        verbose_name=_('Payee'),
+        max_length=256,
+    )
 
     class Meta:
         ordering = ['name', ]
+        verbose_name = _('Payee')
+        verbose_name_plural = _('Payees')
 
     def __str__(self):
         return self.name
@@ -216,10 +264,15 @@ class Payee(models.Model):
 
 @python_2_unicode_compatible
 class Category(models.Model):
-    name = models.CharField(max_length=256)
+    name = models.CharField(
+        max_length=256,
+        verbose_name=_('Name'),
+    )
 
     class Meta:
         ordering = ['name', ]
+        verbose_name = _('Category')
+        verbose_name_plural = _('Categories')
 
     def __str__(self):
         return self.name
@@ -263,38 +316,63 @@ class Transaction(AmountMixin, models.Model):
         (TRANSACTION_TYPES['deposit'], 'deposit'),
     ]
 
-    account = models.ForeignKey(Account, related_name='transactions')
+    account = models.ForeignKey(
+        Account,
+        related_name='transactions',
+        verbose_name=_('Account'),
+    )
 
     parent = models.ForeignKey(
         'account_keeping.Transaction',
         related_name='children',
         blank=True, null=True,
+        verbose_name=_('Parent'),
     )
 
     transaction_type = models.CharField(
         max_length=1,
         choices=TRANSACTION_TYPE_CHOICES,
+        verbose_name=_('Transaction type'),
     )
 
-    transaction_date = models.DateField()
+    transaction_date = models.DateField(
+        verbose_name=_('Transaction date'),
+    )
 
-    description = models.TextField(blank=True)
+    description = models.TextField(
+        verbose_name=_('Description'),
+        blank=True,
+    )
 
-    invoice_number = models.CharField(max_length=256, blank=True)
+    invoice_number = models.CharField(
+        verbose_name=_('Invoice No.'),
+        max_length=256,
+        blank=True,
+    )
 
     invoice = models.ForeignKey(
         Invoice,
         blank=True, null=True,
         related_name='transactions',
+        verbose_name=_('Invoice'),
     )
 
-    payee = models.ForeignKey(Payee, related_name='transactions')
+    payee = models.ForeignKey(
+        Payee,
+        related_name='transactions',
+        verbose_name=_('Payee'),
+    )
 
-    category = models.ForeignKey(Category, related_name='transactions')
+    category = models.ForeignKey(
+        Category,
+        related_name='transactions',
+        verbose_name=_('Category'),
+    )
 
     currency = models.ForeignKey(
         'currency_history.Currency',
         related_name='transactions',
+        verbose_name=_('Currency'),
     )
 
     amount_net = models.DecimalField(
@@ -302,33 +380,44 @@ class Transaction(AmountMixin, models.Model):
         decimal_places=2,
         default=0,
         blank=True,
+        verbose_name=_('Amount net'),
     )
 
-    vat = models.DecimalField(max_digits=4, decimal_places=2, default=0)
+    vat = models.DecimalField(
+        max_digits=4,
+        decimal_places=2,
+        default=0,
+        verbose_name=_('VAT'),
+    )
 
     amount_gross = models.DecimalField(
         max_digits=10,
         decimal_places=2,
         default=0,
         blank=True,
+        verbose_name=_('Amount gross'),
     )
 
     value_net = models.DecimalField(
         max_digits=10,
         decimal_places=2,
         default=0,
+        verbose_name=_('Value net'),
     )
 
     value_gross = models.DecimalField(
         max_digits=10,
         decimal_places=2,
         default=0,
+        verbose_name=_('Value gross'),
     )
 
     objects = TransactionManager()
 
     class Meta:
-        ordering = ['-transaction_date', ]
+        ordering = ['-transaction_date', '-pk']
+        verbose_name = _('Transaction')
+        verbose_name_plural = _('Transactions')
 
     def __str__(self):
         if self.invoice_number:
@@ -359,3 +448,43 @@ class Transaction(AmountMixin, models.Model):
         self.set_amount_fields()
         self.set_value_fields('transaction_type')
         return super(Transaction, self).save(*args, **kwargs)
+
+
+class TransactionResource(resources.ModelResource):
+    invoice_no = Field(column_name='Invoice No.')
+    balance = Field(column_name='Balance')
+    get_transaction_type = Field(column_name='Transaction type')
+
+    @classmethod
+    def field_from_django_field(self, field_name, django_field, readonly):
+        field = resources.ModelResource.field_from_django_field(
+            field_name, django_field, readonly)
+        field.column_name = django_field.verbose_name
+        return field
+
+    class Meta:
+        model = Transaction
+        fields = ('id', 'transaction_date', 'description', 'invoice_no',
+                  'payee__name', 'category__name', 'get_transaction_type',
+                  'currency__iso_code', 'amount_net', 'vat', 'amount_gross',
+                  'balance')
+        export_order = fields
+
+    def dehydrate_invoice_no(self, transaction):  # pragma: nocover
+        if transaction.invoice_number:
+            return transaction.invoice_number
+        if transaction.invoice and transaction.invoice.invoice_number:
+            return transaction.invoice.invoice_number
+        return ''
+
+    def dehydrate_balance(self, transaction):  # pragma: nocover
+        account_balance = transaction.account.transactions.filter(
+            models.Q(parent__isnull=True),
+            models.Q(transaction_date__lt=transaction.transaction_date) |
+            (models.Q(transaction_date=transaction.transaction_date,
+                      pk__lte=transaction.pk)),
+        ).aggregate(models.Sum('value_gross'))['value_gross__sum'] or 0
+        return account_balance + transaction.account.initial_amount
+
+    def dehydrate_get_transaction_type(self, transaction):  # pragma: nocover
+        return transaction.get_transaction_type_display()
