@@ -1,5 +1,6 @@
 === ongoing (0.2.X - to be released as 0.3) ===
 
+- Added transaction export view
 - Fixed freckle integration
 - Added payee management views
 - Improved transaction form
